  * uscan:
    + Fix bad package name in git HEAD mode.  Closes: #896136
    + Modified to use common Perl modules.  MR: !51
    + Download only the good ref in gitmode shallow.  Closes: #910709; MR: !57
    + Fix documentation: -dd isn't usable, but --dd is.  MR: !58
    + Embed mk-origtargz instead of launching it and parse stdout.  MR: !55
  * French translation update.  MR: !59
  * mk-origtargz:
    + Rewritten using common Perl files.  MR: !55
    + Don't override compression when set in command line when we are
      implicitly repacking.  Closes: #894518; MR: !60
    + Accept uncompressed tarballs as source file.  Closes: #838682; MR: !64
    + Switch default compression from gzip to xz if source format is 2.0 or if
      mk-origtargz isn't used in a debian source directory
      Closes: #910803; MR: !61; MMR: !63

  [ Daniel Kahn Gillmor ]
  * uscan:
    + Fix typo in documentation, s/hush/hash.  Closes: #910759

  [ Mattia Rizzolo ]
  * mk-build-deps:
    + Add patch by Joost van Baal-Ilić to allow building a package even if the
      package doesn't have any build dependencies.  Closes: #910369

  [ Eli Uriegas ]
  * mk-build-deps:
    + Fix use of an uninitialized variable in build_equiv().  MR: !56

 -- Mattia Rizzolo <mattia@debian.org>  Tue, 09 Oct 2018 23:07:22 +0200

devscripts (2.18.6) unstable; urgency=medium

  [ Unit 193 ]
  * uscan:
    + Tweak the bash completion so directory names can be tab completed.

  [ Simon McVittie ]
  * sadt:
    + Ignore the new test restriction "superficial".  MR: !50

  [ Mattia Rizzolo ]
  * tests:
    + Fix autopkgtest that was failing due to missing test dependency
      on fakeroot.  Closes: #910262

 -- Mattia Rizzolo <mattia@debian.org>  Fri, 05 Oct 2018 01:00:11 +0200

devscripts (2.18.5) unstable; urgency=medium

  [ Antoine Beaupre ]
  * debchange:
    + Bump LTS version number from 7 to 8.  Closes: #908062

  [ Mattia Rizzolo ]
  * mk-build-deps: