@@ -15,6 +15,8 @@ devscripts (2.18.7) UNRELEASED; urgency=medium
     + Download only the good ref in gitmode shallow.  Closes: #910709; MR: !57
     + Fix documentation: -dd isn't usable, but --dd is.  MR: !58
     + Embed mk-origtargz instead of launching it and parse stdout.  MR: !55
+    + Enclose the whole @ANY_VERSION@, @ARCHIVE_EXT@, @DEB_EXT@ and
+      @SIGNATURE_EXT into non-capturing groups (See #910910).  MR: !66
   * French translation update.  MR: !59
   * mk-origtargz:
     + Rewritten using common Perl files.  MR: !55
